Fix header z-index issue

--- a/_sass/partials/_header.scss
+++ b/_sass/partials/_header.scss
@@ -1,7 +1,7 @@
 %toggle {
   cursor: pointer;
-  user-select: none;
-  z-index: 2;
+  // user-select: none;
+  // z-index: 4;
 }
 
 .navMenu {
@@ -14,6 +14,7 @@
     margin: 0;
     height: inherit;
     transform: none;
+    box-shadow: none;
   }
   transform: translateY(-100%);
   display: flex;
@@ -24,7 +25,8 @@
   top: 0;
   left: 0;
   right: 0;
-  transition: transform 300ms;
+  transition: transform .4s cubic-bezier(.2, 1, .3, 1);
+  box-shadow: inset 0 -4px 0 lighten($primary, 25%);
 
   &-isOpen {
     // make toggle icon #fff when clicked
